spade-tests/src/snapshots/spade_tests__ast_lowering__good_error_message_on_empty_match_statement.snap
---
source: spade-tests/src/ast_lowering.rs
---
fn match_bool(x: bool) -> bool {
    match x {

    }
}

error: Match body has no arms
  ┌─ testinput:2:13
  │  
2 │       match x {
  │ ╭─────────────^
3 │ │ 
4 │ │     }
  │ ╰─────^ This match body has no arms
