spade-tests/src/snapshots/spade_tests__ast_lowering__lambda_captures_work.snap
---
source: spade-tests/src/ast_lowering.rs
expression: "items.iter().map(| item | format! (\"{item}\")).join(\"\\n\")"
---
entity \test () -> () {
	const e2: uint<8> = 0
	let x_n101: uint<8> = Alias(e2)
	let e5: {x: uint<8>} = ConstructTuple(x_n101)
	let e11: () = ConstructTuple()
	let e4: () = Instance(\impl#0::call[543] )(e5, e11)
	let l_n113: () = Alias(e4)
	let e1: () = Nop()
} => e1
entity \impl#0::call[543] ((self, self_n111, {x: uint<8>}), (args, args_n112, ())) -> () {
	let e393: uint<8> = IndexTuple(0)(self_n111)
	let x_n101: uint<8> = Alias(e393)
	let y_n102: uint<8> = Alias(x_n101)
	let e8: () = Nop()
} => e8
