spade-tests/src/snapshots/spade_tests__ast_lowering__mod_recommendations_are_correct_with_enums.snap
---
source: spade-tests/src/ast_lowering.rs
---
pub mod submod {
    mod x {enum A {}}
}
mod submod2 {
    use lib::submod::x::A;
}


error: A is inaccessible
  ┌─ testinput:5:25
  │
2 │     mod x {enum A {}}
  │         -  --------- The inaccessible item is defined here
  │         │   
  │         The item is inaccessible because x is inaccessible
  ·
5 │     use lib::submod::x::A;
  │                      -  ^ A is inaccessible
  │                      │   
  │                      Because x is inaccessible
  │
  = note: consider using `pub` to alter its visibility
