spade-tests/src/snapshots/spade_tests__ast_lowering__named_struct_patterns_errors_if_binding_to_undefined_name.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct A {x: bool}

fn test(a: A) -> bool {
    let A { y } = a;
    true
}


error: No such argument: y
  ┌─ testinput:4:13
  │
4 │     let A { y } = a;
  │             ^ No such argument
