spade-tests/src/snapshots/spade_tests__ast_lowering__named_struct_patterns_errors_if_multiple_bindings_to_same_name.snap
---
source: spade-tests/src/ast_lowering.rs
---
struct A {x: bool}

fn test(a: A) -> bool {
    let A { x, x } = a;
    true
}


error: x specified multiple times
  ┌─ testinput:4:16
  │
4 │     let A { x, x } = a;
  │             -  ^ Later specified here
  │             │   
  │             First specified here
